tests/ui/never_type/diverging-fallback-no-leak.fallback.stderr
error[E0277]: the trait bound `!: Test` is not satisfied
  --> $DIR/diverging-fallback-no-leak.rs:18:23
   |
LL |     unconstrained_arg(return);
   |     ----------------- ^^^^^^ the trait `Test` is not implemented for `!`
   |     |
   |     required by a bound introduced by this call
   |
help: the following other types implement trait `Test`
  --> $DIR/diverging-fallback-no-leak.rs:10:1
   |
LL | impl Test for i32 {}
   | ^^^^^^^^^^^^^^^^^ `i32`
LL | impl Test for () {}
   | ^^^^^^^^^^^^^^^^ `()`
   = note: this error might have been caused by changes to Rust's type-inference algorithm (see issue #48950 <https://github.com/rust-lang/rust/issues/48950> for more information)
   = help: you might have intended to use the type `()` here instead
note: required by a bound in `unconstrained_arg`
  --> $DIR/diverging-fallback-no-leak.rs:13:25
   |
LL | fn unconstrained_arg<T: Test>(_: T) {}
   |                         ^^^^ required by this bound in `unconstrained_arg`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
